[gd_scene load_steps=3 format=3 uid="uid://dmainmenu00001"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_menu"]
[ext_resource type="FontFile" path="res://assets/fonts/Orbitron-Bold.ttf" id="2_orbitron"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.12, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_orbitron")
theme_override_font_sizes/font_size = 48
text = "VOIDRIFT"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_orbitron")
theme_override_font_sizes/font_size = 24
text = "â–¶ Play"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_orbitron")
theme_override_font_sizes/font_size = 24
text = "âš™ Options"

[node name="WeaponsLabButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_orbitron")
theme_override_font_sizes/font_size = 24
text = "ðŸ”§ Weapons Lab"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_orbitron")
theme_override_font_sizes/font_size = 24
text = "âœ• Quit"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -30.0
offset_right = 200.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
text = "Development Build"
